--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <title>API Practice</title>
 </head>
 <body>
-    <div class="container">
+    <div id="container">
         <h1>GIF SEARCH</h1>
-        <img src="#">
+            <div class="gifs">
+                <img class="img1" src="#">
+                <img class="img2" src="#">
+                <img class="img3" src="#">
+                <img class="img4" src="#">
+                <img class="img5" src="#">
+            </div>
         <div class="subcontainer">
             <input type="text" class="search-bar">
             <button>Search</button>
